Works for 2 nodes

--- a/Objects/nrf-mesh-api.build_log.htm
+++ b/Objects/nrf-mesh-api.build_log.htm
@@ -22,7 +22,7 @@ Dialog DLL:      TARMCM1.DLL V1.11.0.0
  
 <h2>Project:</h2>
 D:\Mega\(3)SUS\GIT_mesh_pavic\node-mesh-novi\node-mesh\nrf-mesh-api.uvprojx
-Project File Date:  01/15/2017
+Project File Date:  01/16/2017
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
@@ -31,26 +31,29 @@ assembling arm_startup_nrf51.s...
 compiling ringbuf.c...
 compiling system_nrf51.c...
 compiling node-radio.c...
-node-radio.c(44): warning:  #177-D: variable "tmp"  was declared but never referenced
-      int cnt = 0, i = 0, tmp;
-node-radio.c: 1 warning, 0 errors
 compiling node.c...
 compiling main_mesh_V2.c...
-main_mesh_V2.c(100): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
-  		temp_cnt = sprintf(&temp_buff[4], "ID: %X \t Temperatura: %d C \r\n",get_nrf_id(), temp_data);
+main_mesh_V2.c(72): warning:  #177-D: variable "temp_node"  was declared but never referenced
+  	node_t			temp_node;
+main_mesh_V2.c(73): warning:  #177-D: variable "temp_cnt"  was declared but never referenced
+  	int	temp_cnt=0;
 main_mesh_V2.c(74): warning:  #177-D: variable "i"  was declared but never referenced
   	int i, temp_data;
-main_mesh_V2.c: 2 warnings, 0 errors
+main_mesh_V2.c(74): warning:  #177-D: variable "temp_data"  was declared but never referenced
+  	int i, temp_data;
+main_mesh_V2.c(75): warning:  #177-D: variable "temp_buff"  was declared but never referenced
+  	unsigned char temp_buff[100];
+main_mesh_V2.c: 5 warnings, 0 errors
 compiling radio-platform.c...
-radio-platform.c(523): warning:  #177-D: variable "base_addr"  was declared but never referenced
+radio-platform.c(535): warning:  #177-D: variable "base_addr"  was declared but never referenced
   	uint8_t base_addr[4];
-radio-platform.c(524): warning:  #177-D: variable "temp_addr"  was declared but never referenced
+radio-platform.c(536): warning:  #177-D: variable "temp_addr"  was declared but never referenced
   	uint32_t temp_addr;
 radio-platform.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=9076 RO-data=244 RW-data=92 ZI-data=5716  
+Program Size: Code=12864 RO-data=804 RW-data=124 ZI-data=6756  
 FromELF: creating hex file...
-".\Objects\nrf-mesh-api.axf" - 0 Error(s), 5 Warning(s).
+".\Objects\nrf-mesh-api.axf" - 0 Error(s), 7 Warning(s).
 
 <h2>Software Packages used:</h2>
 
