Added delay to set_node_data, cleared unnecessary dbg_print, added feature to set prefix to first byte of receivers nrf id

--- a/Objects/nrf-mesh-api.build_log.htm
+++ b/Objects/nrf-mesh-api.build_log.htm
@@ -21,7 +21,7 @@ Target DLL:      Segger\JL2CM3.dll V2.99.23.0
 Dialog DLL:      TARMCM1.DLL V1.11.0.0
  
 <h2>Project:</h2>
-D:\Mega\(3)SUS\GIT_mesh_pavic\node-mesh-novi\node-mesh\nrf-mesh-api.uvprojx
+D:\Mega\(3)SUS\GIT_mesh_pavic\node-mesh\nrf-mesh-api.uvprojx
 Project File Date:  01/16/2017
 
 <h2>Output:</h2>
@@ -30,30 +30,27 @@ Rebuild target 'Target 1'
 assembling arm_startup_nrf51.s...
 compiling ringbuf.c...
 compiling system_nrf51.c...
-compiling node-radio.c...
 compiling node.c...
+node.c(104): warning:  #177-D: variable "new_data"  was declared but never referenced
+  	int new_data;
+node.c(133): warning:  #223-D: function "timer_delay" declared implicitly
+  				timer_delay(10000);
+node.c: 2 warnings, 0 errors
+compiling node-radio.c...
+node-radio.c(42): warning:  #177-D: variable "new_data"  was declared but never referenced
+  		int new_data;
+node-radio.c: 1 warning, 0 errors
 compiling main_mesh_V2.c...
-main_mesh_V2.c(72): warning:  #177-D: variable "temp_node"  was declared but never referenced
-  	node_t			temp_node;
-main_mesh_V2.c(73): warning:  #177-D: variable "temp_cnt"  was declared but never referenced
-  	int	temp_cnt=0;
-main_mesh_V2.c(74): warning:  #177-D: variable "i"  was declared but never referenced
-  	int i, temp_data;
-main_mesh_V2.c(74): warning:  #177-D: variable "temp_data"  was declared but never referenced
-  	int i, temp_data;
-main_mesh_V2.c(75): warning:  #177-D: variable "temp_buff"  was declared but never referenced
-  	unsigned char temp_buff[100];
-main_mesh_V2.c: 5 warnings, 0 errors
 compiling radio-platform.c...
-radio-platform.c(535): warning:  #177-D: variable "base_addr"  was declared but never referenced
+radio-platform.c(536): warning:  #177-D: variable "base_addr"  was declared but never referenced
   	uint8_t base_addr[4];
-radio-platform.c(536): warning:  #177-D: variable "temp_addr"  was declared but never referenced
+radio-platform.c(537): warning:  #177-D: variable "temp_addr"  was declared but never referenced
   	uint32_t temp_addr;
 radio-platform.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=12864 RO-data=804 RW-data=124 ZI-data=6756  
+Program Size: Code=13900 RO-data=660 RW-data=124 ZI-data=6756  
 FromELF: creating hex file...
-".\Objects\nrf-mesh-api.axf" - 0 Error(s), 7 Warning(s).
+".\Objects\nrf-mesh-api.axf" - 0 Error(s), 5 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -64,7 +61,7 @@ Package Vendor: ARM
    * Component: CORE Version: 5.0.0
 
 <h2>Collection of Component include folders:</h2>
-  D:\Mega\(3)SUS\GIT_mesh_pavic\node-mesh-novi\node-mesh\RTE\_Target_1
+  D:\Mega\(3)SUS\GIT_mesh_pavic\node-mesh\RTE\_Target_1
   C:\Keil_v5\ARM\PACK\ARM\CMSIS\5.0.0\CMSIS\Include
   C:\Keil_v5\ARM\PACK\NordicSemiconductor\nRF_DeviceFamilyPack\8.11.1\Device\Include
 
